@@ -1,6 +1,7 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.exception.ResourceNotFoundException;
+import com.example.demo.exception.ValidationException;
 import com.example.demo.model.DocumentType;
 import com.example.demo.model.Vendor;
 import com.example.demo.model.VendorDocument;
@@ -8,62 +9,56 @@ import com.example.demo.repository.DocumentTypeRepository;
 import com.example.demo.repository.VendorDocumentRepository;
 import com.example.demo.repository.VendorRepository;
 import com.example.demo.service.VendorDocumentService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
+import java.time.LocalDate;
 import java.util.List;
 
 @Service
 public class VendorDocumentServiceImpl implements VendorDocumentService {
 
+    private final VendorDocumentRepository vendorDocumentRepository;
     private final VendorRepository vendorRepository;
     private final DocumentTypeRepository documentTypeRepository;
-    private final VendorDocumentRepository vendorDocumentRepository;
 
-    @Autowired
-    public VendorDocumentServiceImpl(
-            VendorRepository vendorRepository,
-            DocumentTypeRepository documentTypeRepository,
-            VendorDocumentRepository vendorDocumentRepository) {
+    public VendorDocumentServiceImpl(VendorDocumentRepository vendorDocumentRepository,
+                                     VendorRepository vendorRepository,
+                                     DocumentTypeRepository documentTypeRepository) {
+        this.vendorDocumentRepository = vendorDocumentRepository;
         this.vendorRepository = vendorRepository;
         this.documentTypeRepository = documentTypeRepository;
-        this.vendorDocumentRepository = vendorDocumentRepository;
     }
 
     @Override
     public VendorDocument uploadDocument(Long vendorId, Long typeId, VendorDocument document) {
         Vendor vendor = vendorRepository.findById(vendorId)
-                .orElseThrow(() -> new ResourceNotFoundException("Vendor not found with id: " + vendorId));
-
-        DocumentType type = documentTypeRepository.findById(typeId)
-                .orElseThrow(() -> new ResourceNotFoundException("Document type not found with id: " + typeId));
-
-        if (document.getFileUrl() == null || document.getFileUrl().isBlank()) {
-            throw new IllegalArgumentException("File URL is required");
+                .orElseThrow(() -> new ResourceNotFoundException("Vendor not found"));
+        
+        DocumentType documentType = documentTypeRepository.findById(typeId)
+                .orElseThrow(() -> new ResourceNotFoundException("DocumentType not found"));
+        
+        if (document.getFileUrl() == null || document.getFileUrl().trim().isEmpty()) {
+            throw new ValidationException("File URL is required");
         }
-
+        
+        if (document.getExpiryDate() != null && document.getExpiryDate().isBefore(LocalDate.now())) {
+            throw new ValidationException("Expiry date cannot be in the past");
+        }
+        
         document.setVendor(vendor);
-        document.setDocumentType(type);
-        document.setUploadedAt(LocalDateTime.now());
-
-        if (document.getExpiryDate() == null || document.getExpiryDate().isAfter(LocalDateTime.now())) {
-            document.setIsValid(true);
-        } else {
-            document.setIsValid(false);
-        }
-
+        document.setDocumentType(documentType);
+        
         return vendorDocumentRepository.save(document);
     }
 
     @Override
     public List<VendorDocument> getDocumentsForVendor(Long vendorId) {
-        return vendorDocumentRepository.findByVendor_Id(vendorId);
+        return vendorDocumentRepository.findByVendorId(vendorId);
     }
 
     @Override
     public VendorDocument getDocument(Long id) {
         return vendorDocumentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Vendor document not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("VendorDocument not found"));
     }
 }
